# camel-xml2drawio

./: .gitignore  README.md  setup.cfg
src/xml2drawio/: __init__.py  xml2drawio.py
tests/: test_xml2dsl.py
