[metadata]
name = camel-xml2drawio
version = 0.0.1
author = Jorge Castro
author_email = jorgecastro05@hotmail.com
description = xml definition to draw io eip diagram
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    ConfigArgParse
    rich
    lxml

[options.entry_points]
console_scripts =
    xml2drawio = xml2drawio.xml2drawio:main

[options.packages.find]
where = src
